force-app/main/default/objects/tc9_et__Payment_Terms__c/tc9_et__Payment_Terms__c.object-meta.xml
<CustomObject>
    <description>An object that holds details of Payment Terms that are applied when Invoices are created</description>
    <label>Payment Terms</label>
    <nameField>
        <label>Payment Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>