force-app/main/default/objects/tc9_et__Payment_Terms__c/fields/tc9_et__Days_From__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Days_From__c</fullName>
    <description>Defines the number of days to be applied to the Invoice Date/End of Month when calculating the Invoice Due Date.</description>
    <inlineHelpText>Defines the number of days to be applied to the Invoice Date/End of Month when calculating the Invoice Due Date.</inlineHelpText>
    <label>Days From</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>