force-app/main/default/objects/tc9_et__Payment_Terms__c/fields/tc9_et__Due_From__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Due_From__c</fullName>
    <description>Defines if the Invoice Due Date should be calculated based on the Invoice Date or the Last Day of the Month</description>
    <inlineHelpText>Defines if the Invoice Due Date should be calculated based on the Invoice Date or the Last Day of the Month</inlineHelpText>
    <label>Due From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Payment_Terms_Due_From_Picklist</valueSetName>
    </valueSet>
</CustomField>