force-app/main/default/objects/tc9_et__Payment_Terms__c/fields/tc9_et__Payment_Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Payment_Terms_Description__c</fullName>
    <description>Records a description of the Payment Terms to assist Users in selecting the correct Payment Terms</description>
    <inlineHelpText>Records a description of the Payment Terms to assist Users in selecting the correct Payment Terms</inlineHelpText>
    <label>Payment Terms Description</label>
    <type>TextArea</type>
</CustomField>